--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <title>ChatGPT Jailbreaking & Prompt-Consulting</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Poppins', sans-serif;
             text-align: center;
             max-width: 800px;
             margin: auto;
             line-height: 1.6;
-            color: #333;
-            background-color: #f5f5f5;
+            color: #ffffff;
+            background-color: #000000;
             padding: 2rem 0;
         }
 
@@ -29,14 +29,14 @@
         .product-price {
             font-size: 1.25rem;
             font-weight: bold;
-            color: #008080;
+            color: #00ff7f;
         }
 
         .product {
-            background-color: #ffffff;
+            background-color: #1a1a1a;
             padding: 1rem;
             border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
             margin-bottom: 2rem;
         }
     </style>
@@ -45,40 +45,22 @@
     <h1>ChatGPT Jailbreaking & Prompt-Consulting</h1>
     <div class="product">
         <h2>Product 1: JailBreaks</h2>
-        <ul>
-            <li>GPT 3.5 JailBreak - <span class="product-price">$25</span></li>
-            <li>GPT 4.0 JailBreak - <span class="product-price">$40</span></li>
-        </ul>
+        <p>GPT 3.5 JailBreak - <span class="product-price">$25</span></p>
+        <p>GPT 4.0 JailBreak - <span class="product-price">$40</span></p>
     </div>
     <div class="product">
         <h2>Product 2: Prompt Listings</h2>
         <p>Using my JailBreaks, I can help you get answers that regular ChatGPT cannot. Additionally, I offer legal consulting services in areas such as:</p>
-        <ul>
-            <li>Fundraising consultant</li>
-            <li>Product Launching</li>
-            <li>B2B Sales (Consulting, reviewing…)</li>
-            <li>Customer Support</li>
-            <li>Product Management</li>
-            <li>UX Research requests</li>
-            <li>Copywriter requests</li>
-            <li>Social Media ideas</li>
-            <li>Web Development</li>
-        </ul>
+        <p>Fundraising consultant, Product Launching, B2B Sales (Consulting, reviewing…), Customer Support, Product Management, UX Research requests, Copywriter requests, Social Media ideas, Web Development</p>
         <p class="product-price">$20</p>
     </div>
     <div class="product">
         <h2>Product 3: Consulting</h2>
         <p>What to expect:</p>
-        <ul>
-            <li>Ask me anything.</li>
-            <li>Develop your prompt-engineering skills with ChatGPT + JailBreak.</li>
-            <li>Answers questions related to flagging, blocking, illegal content, and potential consequences of your actions with ChatGPT.</li>
-            <li>I can help you get answers for the things you want answers to, but don't know how to get yourself, and how to get the best reply.</li>
-<li>Bonus: Through consulting, you get ChatGPT-4 prompt access via me for the duration of the session! This means you can prompt GPT-4 whatever you want without risking your own account, and additionally, I can help you prompt GPT-4 for better results!</li>
-</ul>
-<p class="product-price">$40 / 30min</p>
-<p>Before the paid consulting starts, you must be concise when telling me what you want and need. Tell me what you expect and want from the session, and I will develop a framework around that information. The paid session does not start before the framework is set.</p>
-</div>
-
-</body>
-</html>
+        <p>Ask me anything. Develop your prompt-engineering skills with ChatGPT + JailBreak. Answers questions related to flagging, blocking, illegal content, and potential consequences of your actions with ChatGPT. I can help you get answers for the things you want answers to, but don't know how to get yourself, and how to get the best reply. Bonus: Through consulting, you get ChatGPT-4 prompt access via me for the duration of the session! This means you can prompt GPT-4 whatever you want without risking your own account, and additionally, I can help you prompt GPT-4 for better results!</p>
+        <p class="product-price">$40 / 30min</p>
+        <p>Before the paid consulting starts, you must be concise when telling me what you want and need. Tell me what you expect and want from the session, and I will develop a framework around that information. The paid session does not start before the framework is set.</p>
+    </div>
+    
+    </body>
+    </html>
