--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     </div>
     <div class="product">
         <h2>Product 2: Prompt Listings</h2>
-        <p>Using my JailBreaks, I can help you get answers that regular ChatGPT cannot. Additionally, I offer legal consulting services in areas such as:</p>
+        <p>Using my JailBreaks, I can help you get answers that regular ChatGPT cannot, such as 
+            
+            Additionally, I offer legal consulting services in areas such as:</p>
         <p>Fundraising consultant, Product Launching, B2B Sales (Consulting, reviewing…), Customer Support, Product Management, UX Research requests, Copywriter requests, Social Media ideas, Web Development</p>
         <p class="product-price">$20</p>
     </div>
